--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
@@ -1,5 +1,6 @@
 ﻿@page "/timestamp"
 @using Dotnet9.Tools.Web.Shared.Public
+@using Dotnet9.Tools.Web.Utils
 @layout DocLayout
 
 <PageTitle>@T("Dotnet9ToolsTitle") - @T("TimestampToolTitle")</PageTitle>
@@ -35,9 +36,9 @@
 </MRow>
 
 <ToolMarkdown
-    LocalPostFilePath="wwwroot/doc/blog_contents/uploads/2022/02/2022-02-27_03.md"
-    RemotePostUrl="https://dotnet9.com/1801"
-    SourceCodeUrl="https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/TimeTools/TimestampTool.razor"/>
+    LocalPostFilePath="@SitePathHelper.ToolsTimestampMarkdown"
+    RemotePostUrl="@SitePathHelper.ToolsTimestampMainPostUrl"
+    SourceCodeUrl="@SitePathHelper.ToolsTimestampSourceUrl"/>
 
 @code
 {
