--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Tag.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Tag.razor
@@ -60,7 +60,7 @@ else
         _items = posts.Select(x =>
         {
             var category = ConstData.CategoryNotTreeItems.FirstOrDefault(c => c.Name == x.Categories![0]);
-            return new CardItem(category?.Name, $"/cat/{category?.Slug}", x.Title, $"/post/{x.Slug}", x.Cover, author: x.CopyrightType == CopyrightType.Default ? T("SiteOwner") : x.Original, originalLink: x.CopyrightType == CopyrightType.Default ? "/" : x.OriginalLink, date: x.CreateDate);
+            return CardItemExtension.CreateCardItem(category, x);
         }).ToList();
     }
 
