--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
@@ -1,18 +1,72 @@
 ﻿@using BlazorComponent.I18n
 @using BlazorComponent
 @using System.Globalization
+
 <span @onclick=@(() =>{ Navigation.NavigateTo("/"); SelectTab = 0;})>
     <img style="cursor: pointer; height: 64px; width: 64px;" class="ml-6" src="/logo.png"/>
 </span>
-<MTabs BackgroundColor="white" Class="mtab-font" Style="margin-left: 120px;" Color="black" SliderColor="purple darken-2" Optional @bind-Value="SelectTab">
-    <MTab Style="text-transform: none" Href="/">@T("Home")</MTab>
-    <MTab Style="text-transform: none" Href="/tools">@T("Tools")</MTab>
-    <MTab Style="text-transform: none" Href="/album">@T("Album")</MTab>
-    <MTab Style="text-transform: none" Href="/cat">@T("Blog")</MTab>
-    <MTab Style="text-transform: none" Href="/tag">@T("Tag")</MTab>
-    <MTab Style="text-transform: none" Href="/timelines">@T("Timelines")</MTab>
-    <MTab Style="text-transform: none" Href="/about">@T("About")</MTab>
-</MTabs>
+<div class="menu-container">
+    <MMenu Rounded="@_menuRounded" OpenOnHover Class="header-menu" OffsetY Transition="slide-y-transition">
+        <ActivatorContent>
+            <MButton Text Class="black--text text-capitalize" Href="/" @attributes="@context.Attrs">@T("Home")</MButton>
+        </ActivatorContent>
+    </MMenu>
+    <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
+        <ActivatorContent>
+            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("Tools")</MButton>
+        </ActivatorContent>
+
+        <ChildContent>
+            <MCard>
+                <MList>
+                    <ToolMenuList></ToolMenuList>
+                </MList>
+            </MCard>
+        </ChildContent>
+    </MMenu>
+    <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
+        <ActivatorContent>
+            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("Album")</MButton>
+        </ActivatorContent>
+
+        <ChildContent>
+            <MCard>
+                <MList>
+                    <AlbumMenuList/>
+                </MList>
+            </MCard>
+        </ChildContent>
+    </MMenu>
+    <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
+        <ActivatorContent>
+            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("Blog")</MButton>
+        </ActivatorContent>
+
+        <ChildContent>
+            <MCard>
+                <CategoryMenuList OnlyUseList="false"/>
+            </MCard>
+        </ChildContent>
+    </MMenu>
+    <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
+        <ActivatorContent>
+            <MButton Text Class="black--text text-capitalize" Href="/tag" @attributes="@context.Attrs">@T("Tag")</MButton>
+        </ActivatorContent>
+    </MMenu>
+    <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
+        <ActivatorContent>
+            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("About")</MButton>
+        </ActivatorContent>
+
+        <ChildContent>
+            <MCard>
+                <MList>
+                    <AboutMenuList/>
+                </MList>
+            </MCard>
+        </ChildContent>
+    </MMenu>
+</div>
 
 <MSpacer></MSpacer>
 
@@ -37,18 +91,19 @@
     public NavigationManager Navigation { get; set; } = default!;
 
     [Inject]
-    public I18nConfig I18nConfig { get; set; } = default!;
+    public I18nConfig I18NConfig { get; set; } = default!;
 
     [CascadingParameter]
     public PublicLayout MainLayout { get; set; } = default!;
 
     private string? _languageIcon;
     public StringNumber SelectTab { get; set; } = 0;
+    private string _menuRounded = "b-xl";
 
 
     protected override async Task OnInitializedAsync()
     {
-        var lang = I18nConfig.Language ?? CultureInfo.CurrentCulture.Name;
+        var lang = I18NConfig.Language ?? CultureInfo.CurrentCulture.Name;
 
         IsChinese = lang == "zh-CN";
 
@@ -63,7 +118,7 @@
 
         await ChangeLanguage(lang);
 
-        I18nConfig.Language = lang;
+        I18NConfig.Language = lang;
     }
 
     private async Task ChangeLanguage(string lang)
@@ -80,3 +135,9 @@
     }
 
 }
+
+<style>
+    .menu-container { font-size: 24px; }
+
+    .header-menu { font-size: 1rem !important; }
+</style>
