--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicHeader.razor
@@ -8,12 +8,12 @@
 <div class="menu-container">
     <MMenu Rounded="@_menuRounded" OpenOnHover Class="header-menu" OffsetY Transition="slide-y-transition">
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" Href="/" @attributes="@context.Attrs">@T("Home")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge Href="/" @attributes="@context.Attrs">@T("Home")</MButton>
         </ActivatorContent>
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("Tools")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("Tools")</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -26,7 +26,7 @@
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("Album")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("Album")</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -39,7 +39,7 @@
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("Blog")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("Blog")</MButton>
         </ActivatorContent>
 
         <ChildContent>
@@ -50,12 +50,12 @@
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" Href="/tag" @attributes="@context.Attrs">@T("Tag")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge Href="/tag" @attributes="@context.Attrs">@T("Tag")</MButton>
         </ActivatorContent>
     </MMenu>
     <MMenu Rounded="@_menuRounded" Class="header-menu" OffsetY>
         <ActivatorContent>
-            <MButton Text Class="black--text text-capitalize" @attributes="@context.Attrs">@T("About")</MButton>
+            <MButton Text Class="black--text text-capitalize" XLarge @attributes="@context.Attrs">@T("About")</MButton>
         </ActivatorContent>
 
         <ChildContent>
