--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicCategorySidebar.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicCategorySidebar.razor
@@ -1,7 +1,4 @@
-﻿@using Dotnet9.Tools.Web.Models
-@using Dotnet9.Tools.Web.Utils
-@using Newtonsoft.Json
-<MList Subheader Dense>
+﻿<MList Subheader Dense>
 
     <MSubheader Class="mt-3">@T("Tools")</MSubheader>
     <ToolMenuList></ToolMenuList>
